# jd-tmall-review-mining

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/fixtures/: club.jd.com__comment_productPageComments.action__productId-100012043978_score-0_sortType-5_page-0_pageSize-10_isShadowSku-0.txt  club.jd.com__comment_productPageComments.action__productId-100012043978_score-0_sortType-5_page-1_pageSize-10_isShadowSku-0.txt  rate.tmall.com__list_detail_rate.htm__itemId-620010218888_currentPage-1_order-3.txt  rate.tmall.com__list_detail_rate.htm__itemId-620010218888_currentPage-2_order-3.txt
data/stopwords/: zh_stopwords.txt
docs/: architecture.md
scripts/: load_fixtures.py
src/cn_review_pipeline/: __init__.py  cli.py  config.py  logging_setup.py  models.py  pipeline.py
src/cn_review_pipeline/analyzer/: __init__.py  insights.py  keywords.py  pipeline.py  sentiment.py
src/cn_review_pipeline/api/: app.py
src/cn_review_pipeline/dashboard/: app.py
src/cn_review_pipeline/processor/: __init__.py  clean.py  pipeline.py  tokenize.py
src/cn_review_pipeline/scraper/: __init__.py  base.py  jd.py  tmall.py
src/cn_review_pipeline/storage/: __init__.py  base.py  mongo.py  postgres.py
src/cn_review_pipeline/tasks/: __init__.py  celery_app.py  jobs.py
tests/: conftest.py  test_analyzer.py  test_api.py  test_pipeline.py  test_processor.py  test_scraper.py  test_storage.py
