[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cn-review-pipeline"
version = "0.1.0"
description = "Scalable review scraping, NLP, and analytics pipeline for Chinese e-commerce platforms (JD, Tmall)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Luffy218" }]
dependencies = [
    # HTTP + scraping
    "httpx>=0.27",
    "tenacity>=8.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "fake-useragent>=1.5",
    # NLP
    "jieba>=0.42.1",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "langdetect>=1.0.9",
    # Storage adapters
    "SQLAlchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pymongo>=4.6",
    "alembic>=1.13",
    # Dashboard
    "streamlit>=1.33",
    "plotly>=5.20",
    "wordcloud>=1.9",
    # API + orchestration
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "celery[redis]>=5.3",
    # Config & logging
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
]

[project.optional-dependencies]
ml = [
    # Heavy DL deps are optional so the base install stays lean.
    "torch>=2.2",
    "transformers>=4.39",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-PyYAML",
]

[project.scripts]
crp = "cn_review_pipeline.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cn_review_pipeline" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
# RUF001/2/3: fullwidth CJK punctuation triggers "ambiguous character" —
# those are the whole point of this project, so ignore.
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
